fix flex wrap for desktop

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -77,6 +77,7 @@ ul {
   list-style-type: none;
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 10px;
   align-content: center;
 }
